--- a/account/templates/registration/login.html
+++ b/account/templates/registration/login.html
@@ -5,7 +5,10 @@
 {% block content %}
     <h1>Log-in</h1>
     {% if form.errors %}
-        <p>Your username and password didn't match. Please try again.</p>
+        <p>
+            Please, use the following form to log-in. If you don't have an
+            account <a href="{% url "register" %}">register here</a>
+        </p>
     {% else %}
         <p>Please, use the following form to log-in:</p>
     {% endif %}
@@ -13,7 +16,7 @@
         <form action="{% url 'login' %}" method="post">
             {% csrf_token %}
             {{ form.as_p }}
-            <input type="hidden" name="next" value="{{ next }}" />
+            <input type="hidden" name="next" value="{{ next }}"/>
             <p><input type="submit" value="Log-in"></p>
         </form>
         <p><a href="{% url "password_reset" %}">Forgotten your password?</a></p>
