--- a/images/templates/images/image/detail.html
+++ b/images/templates/images/image/detail.html
@@ -1,11 +1,13 @@
 {% extends "base.html" %}
+{% load thumbnail %}
 
 {% block title %}{{ image.title }}{% endblock %}
 
 {% block content %}
     <h1>{{ image.title }}</h1>
-    <img src="{{ image.image.url }}" class="image-detail">
-
+    <a href="{{ image.image.url }}">
+        <img src="{% thumbnail image.image 300x0 quality=100 %}" class="image-detail">
+    </a>
     {% with total_likes=image.users_like.count %}
         <div class="image-info">
             <div>
