--- a/account/templates/registration/login.html
+++ b/account/templates/registration/login.html
@@ -21,4 +21,18 @@
         </form>
         <p><a href="{% url "password_reset" %}">Forgotten your password?</a></p>
     </div>
+
+    <div class="social">
+        <ul>
+            <li class="facebook">
+                <a href="{% url "social:begin" "facebook" %}">Sign in with
+                    Facebook</a>
+            </li>
+            <li class="google">
+                <a href="{% url "social:begin" "google-oauth2" %}">
+                    Sign in with Google
+                </a>
+            </li>
+        </ul>
+    </div>
 {% endblock %}
